# tdd-agentic

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.pytorch-gpu.yml  docker-compose.pytorch.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  __init__.py  config.py
backend/agent_logs/: __init__.py  display.py  persist.py  service.py
backend/agents/: checkpointer.py  common.py  context_store.py  graph.py  handoff.py  llm.py  llm_audit.py  message_reducer.py  observability.py  prompts.py  runner.py  runtime_env.py  session_memory.py  state.py
backend/api/: checkpoint_list_cache.py  events.py  main.py  websocket.py
backend/db/: alembic.ini  session.py
backend/rag/: cache.py  embeddings.py  ingestion.py  retrieval.py  workspace_sync.py
backend/tests/: test_agent_log_display.py  test_ai_message_trimming.py  test_bug_fixes.py  test_context_store.py  test_deep_tooling.py  test_dev_subtask_resolution_gate.py  test_devops_verification_gate.py  test_handoff_protocol.py  test_llm_openai_max_tokens.py  test_llm_slug.py  (+27 more)
docs/: agent-context-and-workflow.md  agent-efficiency-plan.md  deep-agents-integration-review.md  langchain-deepagents-index.md  local-model-finetuning-research.md  tool-calling-and-prompts-analysis.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
graphify-out/: .chunk_path  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_python  .graphify_root  .graphify_semantic.json  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
scripts/: install-backend.sh  install_backend.py
(+96 files in other folders)
